you/force-app/main/default/objects/Comissao__c/Comissao__c.object-meta.xml
<CustomObject>
    <label>Comissão</label>
    <nameField>
        <label>Nome da Comissão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comissões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>