you/force-app/main/default/objects/Comissao__c/fields/PorcentagemMaximaComissao__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemMaximaComissao__c</fullName>
    <inlineHelpText>Qual % máxima de cada parcela que será concedido para pagamento da comissão, até zerar o valor total da comissão, até zerar o valor total da distribuição.</inlineHelpText>
    <label>% máxima concedida à comissão</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>