you/force-app/main/default/objects/Comissao__c/fields/SeriePagamentos__c.field-meta.xml
<CustomField>
    <fullName>SeriePagamentos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Série de Pagamentos</label>
    <referenceTo>SeriePagamentos__c</referenceTo>
    <relationshipLabel>Comissões</relationshipLabel>
    <relationshipName>SeriesPagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>