you/force-app/main/default/objects/Comissao__c/fields/ValorTotalComissaoPorcentagem__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalComissaoPorcentagem__c</fullName>
    <label>Valor total comissão (%)</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>